--- a/src/App.css
+++ b/src/App.css
@@ -117,3 +117,19 @@ spinner
 .products-paragaph{
   text-align: center;
 }
+.text-center{
+  text-align: center;
+}
+
+.line{
+  width: 80px;
+  height: 5px;
+  margin: auto;
+  border-radius: 3px;
+  background-color: #008146;
+}
+
+.site-page-header-ghost-wrapper {
+  padding: 24px;
+  background-color: #f5f5f5;
+}
