--- a/src/App.css
+++ b/src/App.css
@@ -133,3 +133,12 @@ spinner
   padding: 24px;
   background-color: #f5f5f5;
 }
+
+.blog-image{
+  width: 800px;
+  height: 500px;
+  object-fit: contain;
+}
+.blog-image-container{
+  text-align: center;
+}
